--- a/Pages/Style/styles.css
+++ b/Pages/Style/styles.css
@@ -317,9 +317,8 @@ input {
 
 .progress-tab {
   grid-area: progress;
-  padding: 10px;
-  overflow-y: auto;
-  border-left: 1px solid #444;
+  display: grid;
+  grid-template-rows: 1fr 1fr; /* top & bottom */
 }
 
 .progress-tab {
@@ -334,22 +333,18 @@ input {
   padding: 15px;
   border-radius: 5px;
   border: 1px solid #444;
+  margin: 15px  ;
   * {
     z-index: 3;
   }
 }
-
+.chunk-status,
 .upload-progress {
-  width: 90%;
-  border-radius: 10px;
+  border-left: 1px solid #444;
   padding: 15px;
   color: #eaeaea;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  display: flex;
   justify-content: center;
-  margin-left: 5%;
+  overflow-y: auto;
 }
 
 .progress-header {
