--- a/Pages/Style/styles.css
+++ b/Pages/Style/styles.css
@@ -258,6 +258,7 @@ input {
 }
 
 .file-upload span {
+  cursor: pointer;
   font-size: 15px;
   background: #222;
   color: white;
@@ -591,6 +592,7 @@ label.start-btn {
 }
 
 .new-folder span {
+  cursor: pointer;
   display: flex;
   align-items: center;
   padding: 0 10px;
@@ -603,11 +605,33 @@ label.start-btn {
 .new-folder input {
   padding: 0 10px;
   background-color: #222;
-  border: 1px solid #2f2f36;
-  border-left: none;
   border-radius: 0 6px 6px 0;
   color: #fff;
   border: 1px solid #444;
+  border-left: none;
+}
+
+.new-folder:hover input {
+  background: #2f2f2f;
+  border-color: #666;
+}
+
+.new-folder:hover span {
+  background: #2f2f2f;
+  border-color: #666;
+}
+
+.new-folder-error:hover span {
+  background: #2f2f2f;
+  border-color: #666;
+}
+
+.new-folder:active input {
+  background: #111;
+}
+
+.new-folder:active span {
+  background: #111;
 }
 
 .new-folder input:focus,
